<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingTop="12dp"
    android:paddingEnd="16dp"
    android:paddingBottom="12dp">

    <ImageView
        android:id="@+id/ivRequestAvatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/bg_avatar_normal"
        android:contentDescription="@string/cd_friend_avatar"
        android:padding="4dp"
        tools:src="@drawable/avatar_1" />

    <TextView
        android:id="@+id/tvRequestName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_weight="1"
        android:textColor="@color/text_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="alice" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_accept" />

    <Button
        android:id="@+id/btnReject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/btn_reject" />

</LinearLayout>
